--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@ permalink: 404.html
   </style>
 
   <pre>
-
+    你怎么找到这个页面的？这个页面走丢啦！不过没关系，快去 git 记录看一下吧！
                        444444444       000000000            444444444   
                       4::::::::4     00:::::::::00         4::::::::4  
                      4:::::::::4   00:::::::::::::00      4:::::::::4  
