--- a/index.html
+++ b/index.html
@@ -15,7 +15,27 @@ tagline:
     <a href="{{ site.BASE_PATH }}{{ post.url }}">{{ post.title }}</a>
   </h2>
 
-  <div>
+  <div class="row">
+    
+    {% if post.figure %}
+
+    <img class="col-sm-3" src="{{ post.figure }}"></img>
+    <div class="col-sm-7">
+      {% if post.fullview %}
+      {{ post.content }}
+      {% else %}
+      {% if post.shortinfo %}
+      {{ post.shortinfo }}
+      {% elsif post.description %}
+      {{ post.description }}
+      {% else %}
+      {{ post.excerpt }}
+      {% endif %}
+      {% endif %}
+    </div>
+
+    {% else %}
+
     {% if post.fullview %}
     {{ post.content }}
     {% else %}
@@ -26,6 +46,8 @@ tagline:
     {% else %}
     {{ post.excerpt }}
     {% endif %}
+    {% endif %}
+
     {% endif %}
   </div>
 
