--- a/share.html
+++ b/share.html
@@ -8,10 +8,11 @@ tagline:
     const paramsStr = window.location.search
     const params = new URLSearchParams(paramsStr)
     if (!navigator.share) {
-        
         new QRCode(document.getElementById("qrcode"), params.get('url'));  // 设置要生成二维码的链接
     } else {
         navigator.share({
+            title: params.get('url'),
+            text: params.get('url'),
             url: params.get('url'),
         });
     }
