--- a/404.html
+++ b/404.html
@@ -18,36 +18,19 @@ permalink: 404.html
 </style>
 
 <pre>
-
-                       444444444       000000000            444444444   
-                      4::::::::4     00:::::::::00         4::::::::4  
-                     4:::::::::4   00:::::::::::::00      4:::::::::4  
-                    4::::44::::4  0:::::::000:::::::0    4::::44::::4  
-                   4::::4 4::::4  0::::::0   0::::::0   4::::4 4::::4  
-                  4::::4  4::::4  0:::::0     0:::::0  4::::4  4::::4  
-                 4::::4   4::::4  0:::::0     0:::::0 4::::4   4::::4  
-                4::::444444::::4440:::::0 000 0:::::04::::444444::::444
-                4::::::::::::::::40:::::0 000 0:::::04::::::::::::::::4
-                4444444444:::::4440:::::0     0:::::04444444444:::::444
-                          4::::4  0:::::0     0:::::0          4::::4  
-                          4::::4  0::::::0   0::::::0          4::::4  
-                          4::::4  0:::::::000:::::::0          4::::4  
-                        44::::::44 00:::::::::::::00         44::::::44
-                        4::::::::4   00:::::::::00           4::::::::4
-                        4444444444     000000000             4444444444
-
-         ,-----.             _   _     _           _                 _     _               _   
-       ,'_/_|_\_`.          | |_| |__ (_)___   ___| |__   ___  _   _| | __| |  _ __   ___ | |_ 
-      /<<::8[O]::>\         | __| '_ \| / __| / __| '_ \ / _ \| | | | |/ _` | | '_ \ / _ \| __|
-     _|-----------|_        | |_| | | | \__ \ \__ \ | | | (_) | |_| | | (_| | | | | | (_) | |_ 
- :::|  | ====-=- |  |:::     \__|_| |_|_|___/ |___/_| |_|\___/ \__,_|_|\__,_| |_| |_|\___/ \__|
- :::|  | -=-==== |  |:::                                                                         
- :::\  | ::::|()||  /:::     _                                                          
- ::::| | ....|()|| |::::    | |__   __ _ _ __  _ __   ___ _ __       _____   _____ _ __ 
-     | |_________| |        | '_ \ / _` | '_ \| '_ \ / _ \ '_ \     / _ \ \ / / _ \ '__|
-     | |\_______/| |        | | | | (_| | |_) | |_) |  __/ | | |_  |  __/\ V /  __/ |   
-    /   \ /   \ /   \       |_| |_|\__,_| .__/| .__/ \___|_| |_( )  \___| \_/ \___|_|   
-    `---' `---' `---'                   |_|   |_|              |/                       
-
-
-    </pre>
+    　　从　　从　　　　前　　前　　　　有　　　　　　　　　座　　　　　　山　　　　　　　　　　　　　　　山　　　　　　　上　　　　　　有　　　　　　　　　座　　　　　　　庙
+    　　从　　从　　前前前前前前前　有有有有有有有　　座座座座座座　　　　山　　　　　　　　　　　　　　　山　　　　　　　上　　　　有有有有有有有　　座座座座座座　　庙庙庙庙庙庙
+    　　从　　从　　　　　　　　　　　　有　　有　　　座　座　座　　山　　山　　山　　　　　　　　　山　　山　　山　　　　上上上　　　　有　　有　　　座　座　座　　　庙　　庙
+    　　从　　从　　前前前　前　前　　有有有有有　　　座座　座　座　山　　山　　山　　　　　　　　　山　　山　　山　　　　上　　　　　有有有有有　　　座座　座　座　　庙庙庙庙庙庙
+    　　从从　从　　前　前　前　前　有　有　　有　　　座　座座座　　山　　山　　山　，，　　　　　　山　　山　　山　　　　上　　　　有　有　　有　　　座　座座座　　　庙庙　庙　庙　　。
+    　从　　从　从　前前前　　　前　　　有有有有　　　座　　座　　　山　　山　　山　　，　　　　　　山　　山　　山　　　　上　　　　　　有有有有　　　座　　座　　　　庙庙庙庙庙庙　。　。
+    从　　从　　从　前　前　　前前　　　有　　有　　座　座座座座座　山山山山山山山　，　　　　　　　山山山山山山山　上上上上上上上　　　有　　有　　座　座座座座座　庙　庙庙庙庙庙　　。
+    
+    　　　　庙　　　　里里里里里　　　　有　　　　　　　　个　　　　页页页页页页页　面面面面面面面　　　　　　　　　现现现现现现现　　　在　　　　　　找　　找　找　不不不不不不不　到到到到　　到　　　　！
+    　庙庙庙庙庙庙　　里　里　里　　有有有有有有有　　　个　个　　　　　　页　　　　　　　面　　　　　　　　　　　　　现　现　　现　在在在在在在在　找找找　找　　　　　　不　　　　　　到　到　到　　　　！
+    　庙　　庙　　　　里里里里里　　　　有　　有　　个个　个　个个　　页页页页页　　面面面面面面面　　　　　　　　　现现现现　　现　　　在　在　　　　找　找找找找　　　　不　　　　　到　到到　到　　　　！
+    　庙庙庙庙庙庙　　里　里　里　　　有有有有有　　　　　个　　　　　页　　　页　　面　面　面　面　　　　　　　　　　现　现现　现　　在　在在在　　　找找　找　　　　　不不　不　　到到到到到　到　　　　！
+    　庙庙　庙　庙　　里里里里里　　有　有　　有　　　　　个　　　　　页　页　页　　面　面面面　面　，，　　　　　　　现现　现　　　在在　　在　　　找找　　找　找　不不　不　　不　　到到　　　到　　　　！
+    　庙庙庙庙庙庙　　　　里　　　　　　有有有有　　　　　个　　　　　　　页　　　　面　面　面　面　　，　　　　　　现现　　现　现　　在　　在　　　　找　　　找　　　　　不　　　　　　到到　　到
+    庙　庙庙庙庙庙　里里里里里里里　　　有　　有　　　　　个　　　　页页页　页页页　面面面面面面面　，　　　　　　　　　现现　现现　　在在在在在在　找找　找找　找　　　　不　　　　到到　　　到到　　　　！
+</pre>
