--- a/404.html
+++ b/404.html
@@ -2,18 +2,12 @@
 layout: page
 permalink: 404.html
 ---
-<!----------------------------------------------------------------
-     _ _           _ _          
-  __| | |__  _   _| | |         Ascii arts included in this page:
- / _` | '_ \| | | | | |         - R2D2, provided by: http://www.chris.com/
-| (_| | |_) | |_| | | |         - Texts, generated from: http://www.network-science.de/ascii/
- \__,_|_.__/ \__, |_|_|         http://github.com/dbtek/dbyll
--------------|___/------------------------------------------------>
 
 <style>
     pre {
         background: none;
         border: none;
+        width: 1400px;
     }
 </style>
 
@@ -34,3 +28,6 @@ permalink: 404.html
     　庙庙庙庙庙庙　　　　里　　　　　　有有有有　　　　　个　　　　　　　页　　　　面　面　面　面　　，　　　　　　现现　　现　现　　在　　在　　　　找　　　找　　　　　不　　　　　　到到　　到
     庙　庙庙庙庙庙　里里里里里里里　　　有　　有　　　　　个　　　　页页页　页页页　面面面面面面面　，　　　　　　　　　现现　现现　　在在在在在在　找找　找找　找　　　　不　　　　到到　　　到到　　　　！
 </pre>
+
+
+<a class="btn btn-default" href="https://github.com/znpdco/znpdco.github.io">去历史版本库里找找吧！</a>
